--- a/radixconfig.yml
+++ b/radixconfig.yml
@@ -8,6 +8,7 @@ spec:
     - name: radix
       build:
         from: radix
+  components:
     - name: api
       ingressConfiguration:
         - websocketfriendly
