--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ pandas = "<2"
 httpx = "^0.24.0"
 psutil = "^5.9.5"
 vtk = "^9.2.6"
+cachetools = "^5.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
