--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
         "@tanstack/react-query": "^5.0.5",
         "@tanstack/react-query-devtools": "^5.4.2",
         "@webviz/subsurface-viewer": "^0.18.1",
+        "@types/geojson": "^7946.0.14",
         "@webviz/well-completions-plot": "^0.0.1-alpha.1",
         "@webviz/well-log-viewer": "^1.4.5",
         "animate.css": "^4.1.1",
