--- a/radixconfig.yml
+++ b/radixconfig.yml
@@ -39,6 +39,7 @@ spec:
           variables:
               UVICORN_PORT: 5000
               UVICORN_ENTRYPOINT: src.backend.primary.main:app
+              OTEL_PYTHON_LOG_FORMAT: "%(pathname)s:%(funcName)s:%(lineno)d:%(levelname)s:%(message)s"
           environmentConfig:
               - environment: prod
                 resources:
