Try insight in frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
             - ./frontend/src:/usr/src/app/frontend/src
             - ./frontend/theme:/usr/src/app/frontend/theme
             - ./frontend/index.html:/usr/src/app/frontend/index.html
+        environment:
+           - VITE_APPLICATIONINSIGHTS_CONNECTION_STRING=${APPLICATIONINSIGHTS_CONNECTION_STRING}
 
     backend-primary:
         build:
