--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.7.8",
+        "@microsoft/applicationinsights-react-js": "^17.0.2",
+        "@microsoft/applicationinsights-web": "^3.0.5",
         "@mui/base": "^5.0.0-beta.3",
         "@mui/icons-material": "^5.14.9",
         "@tanstack/react-query": "^5.0.5",
@@ -29,6 +31,7 @@
         "animate.css": "^4.1.1",
         "axios": "^1.3.0",
         "culori": "^3.2.0",
+        "history": "^5.3.0",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
