--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
             - ./frontend/theme:/usr/src/app/frontend/theme
             - ./frontend/index.html:/usr/src/app/frontend/index.html
         environment:
-           - APPLICATIONINSIGHTS_CONNECTION_STRING
+           - VITE_APPLICATIONINSIGHTS_CONNECTION_STRING=${APPLICATIONINSIGHTS_CONNECTION_STRING}
 
     backend-primary:
         build:
