--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.7.8",
+        "@microsoft/applicationinsights-clickanalytics-js": "^3.0.5",
         "@microsoft/applicationinsights-react-js": "^17.0.2",
         "@microsoft/applicationinsights-web": "^3.0.5",
         "@mui/base": "^5.0.0-beta.3",
