--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ vtk = "^9.2.6"
 fmu-sumo = "1.0.3"
 sumo-wrapper-python = "1.0.6"
 azure-monitor-opentelemetry = "^1.1.0"
+aiocache = "^0.12.2"
 
 
 [tool.poetry.group.dev.dependencies]
