--- a/radixconfig.yml
+++ b/radixconfig.yml
@@ -31,7 +31,7 @@ spec:
           resources:
               requests:
                   memory: 8Gi
-                  cpu: 2000m
+                  cpu: 16
               limits:
                   memory: 32Gi
 
