--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
         "@tanstack/react-query-devtools": "^5.4.2",
         "@webviz/subsurface-viewer": "^0.3.1",
         "@webviz/well-completions-plot": "^0.0.1-alpha.1",
+        "@webviz/well-log-viewer": "^1.4.5",
         "animate.css": "^4.1.1",
         "axios": "^1.6.5",
         "culori": "^3.2.0",
