--- a/radixconfig.yml
+++ b/radixconfig.yml
@@ -192,6 +192,15 @@ spec:
       variables:
         UVICORN_PORT: 8003
 
+    - name: user-grid3d-vtk
+      dockerFileName: ./backend_py/user_grid3d_vtk/Dockerfile
+      schedulerPort: 8003
+      ports:
+        - name: http
+          port: 8003
+      variables:
+        UVICORN_PORT: 8003
+
   dnsAppAlias:
     environment: prod
     component: frontend
