--- a/backend_py/primary/pyproject.toml
+++ b/backend_py/primary/pyproject.toml
@@ -20,14 +20,15 @@ numpy = "^1.24.1"
 orjson = "^3.8.10"
 pandas = {version = "2.0.1", extras = ["performance"]}
 httpx = "^0.24.0"
-fmu-sumo = "1.0.3"
-sumo-wrapper-python = "1.0.6"
+fmu-sumo = "1.2.2"
+sumo-wrapper-python = "1.0.9"
 azure-monitor-opentelemetry = "^1.1.0"
 requests-toolbelt = "^1.0.0"
 pottery = "^3.0.0"
 xtgeo = "^3.8.0"
 core_utils = {path = "../libs/core_utils", develop = true}
 server_schemas = {path = "../libs/server_schemas", develop = true}
+fmu-dataio = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
