--- a/backend_py/primary/pyproject.toml
+++ b/backend_py/primary/pyproject.toml
@@ -20,8 +20,8 @@ numpy = "^1.24.1"
 orjson = "^3.8.10"
 pandas = {version = "2.0.1", extras = ["performance"]}
 httpx = "^0.24.0"
-fmu-sumo = "^2.2.0"
-sumo-wrapper-python = "^1.0.22"
+fmu-sumo = {git = "https://github.com/equinor/fmu-sumo"}
+sumo-wrapper-python = {git = "https://github.com/equinor/sumo-wrapper-python"}
 azure-monitor-opentelemetry = "1.1.0"
 requests-toolbelt = "^1.0.0"
 pottery = "^3.0.0"
